Name: keylo
Version: 0.0.0.1
Description: Comment and uncomment text.
License: BSD2
License-file: LICENSE
Author: Linus Arver
Maintainer: linusarver@gmail.com
Build-Type: Simple
Cabal-Version: >=1.10

Executable keylo
  Main-is: keylo.lhs
  default-language: Haskell2010
  default-extensions:
      MultiWayIf
    , OverloadedStrings
    , PackageImports
    , RecordWildCards
  Hs-source-dirs: src
  Ghc-options: -Wall -Werror -O2 -threaded -fno-warn-tabs
  Build-Depends:
      base >= 4 && < 5
    , brick >= 0.2.1
    , containers >= 0.5 && < 0.6
    , cmdargs >= 0.8 && < 1.0
    , directory >= 1.2.1.0 && < 1.3
    , monads-tf >= 0.1.0.2 && < 0.2
    , parsec >= 3.0.0 && < 4.0
    , process >= 1.2.0.0 && < 2.0
    , safe >= 0.3.9
    , text >= 1.2.0.4 && < 1.3
    , text-zipper >= 0.3.1
    , time >= 1.5.0.1
    , transformers >= 0.4.2.0
    , vector >= 0.10.9.0
    , vty >= 5.1.0 && < 6.0
