name: keylo
version: 0.0.0.1
description: Keyboard layout optimizer.
license: BSD2
license-file: LICENSE
author: Linus Arver
maintainer: linusarver@gmail.com
build-Type: Simple
cabal-Version: >=1.10

executable keylo
  main-is: keylo.lhs
  default-language: Haskell2010
  default-extensions:
      MultiWayIf
    , OverloadedStrings
    , PackageImports
    , RecordWildCards
  hs-source-dirs: src
  ghc-options: -Wall -Werror -O2 -threaded -fno-warn-tabs
--  ghc-options: -Wall -Werror -O2 -threaded -fno-warn-tabs -prof -fprof-auto -rtsopts
  build-depends:
      base >= 4 && < 5
    , containers >= 0.5 && < 0.6
    , cmdargs >= 0.8 && < 1.0
    , directory >= 1.2.1.0 && < 1.3
    , monads-tf >= 0.1.0.2 && < 0.2
    , parallel-io >= 0.3.3 && < 0.4
    , parsec >= 3.0.0 && < 4.0
    , pcg-random >= 0.1.3.2 && < 2.0
    , process >= 1.2.0.0 && < 2.0
    , safe >= 0.3.9
    , text >= 1.2.0.4 && < 1.3
    , text-zipper >= 0.3.1
    , time >= 1.5.0.1
    , transformers >= 0.4.2.0
    , vector >= 0.10.9.0
    , vty >= 5.1.0 && < 6.0
